init commit, task solver implemented + it test. basic solution structure.

--- a/src/Snapmd.Web/project.json
+++ b/src/Snapmd.Web/project.json
@@ -1,9 +1,5 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.0",
-      "type": "platform"
-    },
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -16,12 +12,7 @@
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "portable-net45+win8"
-      ]
-    }
+    "net46": {} 
   },
 
   "buildOptions": {
